#6u6my0 - fix blurry image and change lazyload back to swiper default

--- a/styles/components/trending_categories.scss
+++ b/styles/components/trending_categories.scss
@@ -137,6 +137,6 @@
   height: 100%;
 }
 
-.trending_category_tile.lazy_loaded .skeleton-box {
+.swiper-slide.loaded .skeleton-box {
   display: none;
 }
